Add an option to ssh plugin to avoid changing profile

The default is not to change profiles on ssh connect/disconnect.
The current state is saved in the ssh plugin config file, and can be modified in the ssh plugin widget.

BUG: 453545
BUG: 459705
FIXED-IN: 22.12